Bug 1719011 - Consider incomplete date/time inputs as "bad input". r=smaug

This matches Chrome.

Differential Revision: https://phabricator.services.mozilla.com/D119037